--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,11 @@
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
     </div>
+	<form>
+		<input class="input" name="name" required/>
+		<input class="input" name="name-slug" required/>
+		<input class="input" name="number of contributers" required/>
+		<input class="input" name="maximum number of branches" required/>
+	</form>
   </body>
 </html>
