--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
       <button class="button">Boom?</button>
     </div>
 	<form>
-		<input class="input" name="name" required/>
-		<input class="input" name="name-slug" required/>
-		<input class="input" name="number of contributers" required/>
-		<input class="input" name="maximum number of branches" required/>
+		<input class="input" name="name" type="text" required/>
+		<input class="input" name="name_slug" required/>
+		<input class="input" name="contributers" min="1" max="100" required/>
+		<input class="input" name="max_branches" min="1" max="100" required/>
 	</form>
   </body>
 </html>
