--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
       <button class="button">Boom?</button>
     </div>
 	<form>
-		<input class="input" name="name" type="text" required/>
-		<input class="input" name="name_slug" required/>
+		<input class="input" name="name" type="text" minlength="20" required/>
+		<input class="input" name="name_slug" pattern="^([a-z][a-z0-9]*)(-[a-z0-9]+)*$" required/>
 		<input class="input" name="contributers" min="1" max="100" required/>
 		<input class="input" name="max_branches" min="1" max="100" required/>
 	</form>
